--- a/css/style.css
+++ b/css/style.css
@@ -515,6 +515,49 @@ nav {
 
 
 
+/* Animaciones  */
+
+
+.icons {
+    display: flex;
+    column-gap: 25px;
+}
+
+.icon {
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius:100%;
+    outline: 2px solid #fff;
+    transition-property:ease-in-out;
+    transition-duration: .95s;
+}
+
+
+.icon--instagram:hover {
+    background-image: radial-gradient(circle at 30% 107%,
+            #fdf497 0%, #fdf497 5%,
+            #fd5949 45%, #d6249f 60%,
+            #285AEB 90%);
+    outline-color: #a02d76;
+    outline-offset: 4px;
+}
+
+
+
+.icon--linkedin:hover {
+    background-color: #0077b5;
+    outline-color: #0077b5;
+    outline-offset: 4px;
+}
+
+
+.font--bold:hover {
+	font-weight: bold;
+}
+
 
 
 
